# co-dev-backend

./: .gitignore  README.md  pyproject.toml
co_dev/: manage.py
co_dev/co_dev/: asgi.py  settings.py  urls.py  wsgi.py
co_dev/users/: models.py  serializers.py  views.py
co_dev/users/migrations/: 0001_initial.py
sources/: api.py  jwt.py  models.py  permissions.py  projects.py  secrets.py  server.py  skills.py
sources/api/: users.py
static/: authentication.html  main.html  main_page.html  registration.html
templates/: main.jinja2  skills.jinja2
